updating styling to category details page, fixed mobile nav menu spacing issue, conditional display of uom on product card

--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -21,3 +21,11 @@ button:active {
   width: 229px;
   height: 43px;
 }
+
+button.btn.details-btn {
+  width: 125px;
+  height: 29px;
+  font-size: 12px;
+  margin-top: 8%;
+  padding: 8px;
+}
